manifests/deployments/data-ai-bot/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: data-ai-bot
  annotations:
    elifesciences.org/default-project: data-hub
