manifests/deployments/data-ai-bot/data-ai-bot--prod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: data-ai-bot--prod
  labels:
    app: data-ai-bot--prod
  namespace: data-ai-bot
spec:
  serviceName: "data-ai-bot" # Required for StatefulSet
  replicas: 1
  selector:
    matchLabels:
      app: data-ai-bot--prod
  template:
    metadata:
      labels:
        app: data-ai-bot--prod
    spec:
      containers:
      - name: data-ai-bot
        image: ghcr.io/de-code/data-ai-bot:0.0.18 # {"$imagepolicy": "data-ai-bot:data-ai-bot-stable"}
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: data-ai-bot-configs-volume
          mountPath: /config/
          readOnly: true
        - name: gcp-secret-volume
          mountPath: /.secrets/gcp/
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1500m
            memory: 500Mi
      volumes:
      - name: data-ai-bot-configs-volume
        configMap:
          name: data-ai-bot-configs
      - name: gcp-secret-volume
        secret:
          secretName: gcp
