manifests/deployments/data-ai-bot/data-ai-bot--stg.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: data-ai-bot--stg
  labels:
    app: data-ai-bot--stg
  namespace: data-ai-bot
spec:
  serviceName: "data-ai-bot"  # Required for StatefulSet
  replicas: 1
  selector:
    matchLabels:
      app: data-ai-bot--stg
  template:
    metadata:
      labels:
        app: data-ai-bot--stg
    spec:
      containers:
      - name: data-ai-bot
        image: ghcr.io/de-code/data-ai-bot:0.0.7 # {"$imagepolicy": "data-ai-bot:data-ai-bot-stable"}
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1500m
            memory: 500Mi
