manifests/deployments/data-ai-bot/data-ai-mcp-api--prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-ai-mcp-api--prod
  labels:
    app: data-ai-mcp-api--prod
  namespace: data-ai-bot
spec:
  selector:
    matchLabels:
      app: data-ai-mcp-api--prod
  template:
    metadata:
      labels:
        app: data-ai-mcp-api--prod
    spec:
      containers:
      - name: data-ai-mcp-api
        image: ghcr.io/de-code/py-conf-mcp:0.0.5 # {"$imagepolicy": "data-ai-bot:py-conf-mcp-stable"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: data-ai-bot-configs-volume
          mountPath: /config/
          readOnly: true
        - name: opensearch-secret-volume
          mountPath: /secrets/opensearch/
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1500m
            memory: 500Mi
      volumes:
      - name: data-ai-bot-configs-volume
        configMap:
          name: data-ai-bot-configs
      - name: opensearch-secret-volume
        secret:
          secretName: opensearch-prod-admin-password
---
apiVersion: v1
kind: Service
metadata:
  name: data-ai-mcp-api--prod
  namespace: data-ai-bot
spec:
  selector:
    app: data-ai-mcp-api--prod
  ports:
  - port: 8080
