manifests/deployments/data-ai-bot/data-ai-mcp-api--stg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-ai-mcp-api--stg
  labels:
    app: data-ai-mcp-api--stg
  namespace: data-ai-bot
spec:
  selector:
    matchLabels:
      app: data-ai-mcp-api--stg
  template:
    metadata:
      labels:
        app: data-ai-mcp-api--stg
    spec:
      containers:
      - name: data-ai-mcp-api
        image: ghcr.io/de-code/py-conf-mcp_unstable:main-9b72b7fb-20250619.1443 # {"$imagepolicy": "data-ai-bot:py-conf-mcp-unstable"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: data-ai-bot-configs-volume
          mountPath: /config/
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1500m
            memory: 500Mi
      volumes:
      - name: data-ai-bot-configs-volume
        configMap:
          name: data-ai-bot-configs
---
apiVersion: v1
kind: Service
metadata:
  name: data-ai-mcp-api--stg
  namespace: data-ai-bot
spec:
  selector:
    app: data-ai-mcp-api--stg
  ports:
  - port: 8080
