manifests/deployments/data-ai-bot/phoenix-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phoenix
    env: prod
  name: phoenix--prod
  namespace: data-ai-bot
spec:
  ports:
  - port: 6006
    protocol: TCP
    targetPort: 6006
  selector:
    app: phoenix
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: phoenix--prod
  namespace: data-ai-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phoenix
      env: prod
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
        prometheus.io/scrape: "true"
      labels:
        app: phoenix
        env: prod
    spec:
      containers:
      - name: phoenix
        args:
        - -m
        - phoenix.server.main
        - serve
        command:
        - python
        image: docker.io/arizephoenix/phoenix:version-4.0.0
        ports:
        - containerPort: 6006
        - containerPort: 4317
        - containerPort: 9090
        securityContext:
          fsGroup: 1000
        volumeMounts:
        - mountPath: /mnt/data
          name: phoenix
  volumeClaimTemplates:
  - metadata:
      name: phoenix
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: data-hub-gp3
      resources:
        requests:
          storage: 1Gi
