manifests/deployments/data-ai-bot/phoenix--stg.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phoenix
    env: stg
  name: phoenix--stg
  namespace: data-ai-bot
spec:
  ports:
  - port: 6006
    protocol: TCP
    targetPort: 6006
  selector:
    app: phoenix
    env: stg
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: phoenix--stg
  namespace: data-ai-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phoenix
      env: stg
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
        prometheus.io/scrape: "true"
      labels:
        app: phoenix
        env: stg
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: us-east-1c
      containers:
      - name: phoenix
        args:
        - -m
        - phoenix.server.main
        - serve
        command:
        - python
        image: docker.io/arizephoenix/phoenix:version-20.17.0 # {"$imagepolicy": "data-ai-bot:phoenix"}
        ports:
        - containerPort: 6006
        - containerPort: 4317
        - containerPort: 9090
        volumeMounts:
        - mountPath: /mnt/data
          name: phoenix--stg
        resources:
          requests:
            memory: "280Mi"
            cpu: "20m"
  volumeClaimTemplates:
  - metadata:
      name: phoenix--stg
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: data-hub-gp3
      resources:
        requests:
          storage: 1Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phoenix--stg
  namespace: data-ai-bot
  labels:
    app: phoenix
    env: stg
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-elife-oauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: data-ai-bot-phoenix--stg.elifesciences.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: phoenix--stg
                port:
                  number: 6006
  tls:
    - hosts:
        - data-ai-bot-phoenix--stg.elifesciences.org
      secretName: data-ai-bot-phoenix--stg.elifesciences.org-tls
